ec2-security-group.tf
# Create security group with http, ssh and mysql access
resource "aws_security_group" "sg-lesson9" {
  name        = "security_group_for_lesson9"
  description = "Security group for Lesson9"
  vpc_id      = aws_vpc.vpc-lesson9.id

  ingress {
    description = "HTTP"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-lesson9"
  }
}
